--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     -->
     <link rel="stylesheet" href="%PUBLIC_URL%/font-awesome/font-awesome-4.7.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/font-awesome/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>React App</title>
 </head>
 
